link style and script.js

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
 
   <!--default style for the page-->
-  <link rel="stylesheet" href="assets/styles/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -91,7 +91,7 @@
     crossorigin="anonymous"></script>
 
   <!-- Logic script -->
-  <script src="assets/script/script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
