cleanse html and css

--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  <!--font awesome-->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  <!--font awesome-->  
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
-
+  
   <!--default style for the page-->
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -37,13 +35,8 @@
     </div>
     <!-- navbar end -->
   </nav>
-  <div class="wrapper">
-    <div class="row">
-      <div class="col-lg-8">
-        <div class="card">
-          <!-- <div class="card-header">
-            <h2>Generate a Password</h2>
-          </div> -->
+  <div class="wrapper">          
+        <div class="card"> 
           <div class="card-body">
             <textarea readonly id="password" placeholder="Your Secure Password"
               aria-label="Generated Password"></textarea>
@@ -51,28 +44,10 @@
           <div class="card-footer">
             <button id="generate" class="btn"> <i class='fas fa-user-secret'></i> Generate Password</button>
           </div>
-        </div>
-      </div>
-      <div class="col-lg-4">
-        <div class="card">
-          <img class="card-img-top" src="assets/images/pp_full_screen.PNG" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Don't Like Prompts?</h5>
-            <p class="card-text">Hmmm... understandable. Take a look at my new improved no prompts version of Password
-              Gernerator.</p>
-            <a href="#" class="btn btn-primary">Go</a>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-
-  </div>
+        </div>        
+  </div>  <!-- wrapper end -->
   <!-- footer -->
-  <footer>
-    <!-- <hr /> -->
-    <!-- <span>Designed and Built by Abhijeet Bhagat</span> -->
+  <footer>   
     <span>Built by Abhijeet Bhagat</span>
     <a href="https://github.com/bhagatabhijeet/passwordgenerator">
       <i class="fab fa-github" aria-hidden="true" style="font-size: 15px;"></i>
