added details about improved version called password panda

--- a/index.html
+++ b/index.html
@@ -46,6 +46,34 @@
           </div>
         </div>        
   </div>  <!-- wrapper end -->
+
+  <!-- 
+    I have built 2 version of Password Generator 
+    1. is this current application & 
+    2. is the new improved UI, no prompts completely event driven version called Password Panda.
+    Following Div is to showcase that version as well.
+    source:GitHub Repo: https://github.com/bhagatabhijeet/passwordpanda
+    Deployed At : https://bhagatabhijeet.github.io/passwordpanda/index.html
+  -->
+  <div id="improvedversion">
+    <div style="color: #a11f2c;">Don't like prompts?</div>
+    <div>Take a look at my 
+      <strong>improved UI</strong>, 
+      <em>no prompts completely event driven version.</em>
+    </div>
+    <div>I call it :
+      <strong>Password Panda</strong> 
+      <a href="https://bhagatabhijeet.github.io/passwordpanda/index.html">
+        <img src="assets/ppicon.png" height="40px">
+      </a>
+    </div>
+    <div>Deployed At : <a href="https://bhagatabhijeet.github.io/passwordpanda/index.html">Git Hub Pages</a></div>
+    <div>GitHub Repo: <a href="https://github.com/bhagatabhijeet/passwordpanda">Source Code</a></div>
+    <div>
+      <img src="assets/pp.png" id="improvedverimg" alt="improved Version Image">
+    </div>
+  </div>
+  <div style="height: 200px;"></div>
   <!-- footer -->
   <footer>   
     <span>Built by Abhijeet Bhagat</span>
